--- a/Tailwind/index.html
+++ b/Tailwind/index.html
@@ -6,8 +6,8 @@
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
   </head>
 
-  <body class="font-[Montserrat] text-white bg-stone-800">
-    <header class="flex justify-between items-center py-6 px-10 bg-stone-900">
+  <body class="font-[Montserrat] text-white bg-gray-900">
+    <header class="flex justify-between items-center py-6 px-10 bg-gray-950">
       <h1 class="font-bold text-4xl">PORTFOLIO - DIEGO - Diego B&T@</h1>
       <p class="text-2xl">DESENVOLVEDOR WEB FULL STACK</p>
     </header>
