--- a/Tailwind/index.html
+++ b/Tailwind/index.html
@@ -6,17 +6,17 @@
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
   </head>
 
-  <body class="font-[Montserrat] text-white bg-gray-900">
-    <header class="flex justify-between items-center py-6 px-10 bg-gray-950">
-      <h1 class="font-bold text-4xl">PORTFOLIO - DIEGO - Diego B&T@</h1>
+  <body class="font-[Montserrat] text-white bg-gradient-to-r from-green-950 via-green-880 to-green-700" >
+    <header class="flex justify-between items-center py-6 px-10 bg-green-950 border-1 border-gray-700">
+      <h1 class="font-bold text-4xl ">PORTFOLIO - DIEGO - Diego B&T@</h1>
       <p class="text-2xl">DESENVOLVEDOR WEB FULL STACK</p>
     </header>
 
     <section class="p-8 flex flex-col gap-4 border-b border-gray-600">
       <h2 class="text-2xl font-bold">Sobre mim</h2>
       <p>
-        Sou um dos instrutores de HTML, CSS e JavaScript da Hahtag e ensino
-        pessoas a sair do zero e a se desenvolverem na programação
+        Sou um dos instrutores de HTML, CSS e JavaScript da Hashtag e ensino
+        pessoas a sair do zero e a se desenvolverem na programação 
       </p>
     </section>
 
@@ -52,14 +52,15 @@
       <h2 class="text-2xl font-bold">Projetos</h2>
 
       <div class="flex gap-5">
-        <div class="flex flex-col gap-3">
+        <div class="flex flex-col gap-3 text-center">
           <h3 class="font-bold text-xl">Réplica do Site do Google</h3>
           <img
             width="600"
-            src="../Imagens/google.png"
+            src="Imagens/google.png"
             alt="Print do Projeto do Google"
           />
-          <a
+          <a 
+            class = "p-1 text-center" 
             target="_blank"
             class="underline hover:text-blue-300"
             href="https://www.youtube.com/watch?v=0Ba6PVHMa0A"
@@ -67,14 +68,15 @@
           >
         </div>
 
-        <div class="flex flex-col gap-3">
+        <div class="flex flex-col gap-3 text-center"> 
           <h3 class="font-bold text-xl">Réplica do Site do YouTube</h3>
           <img
             width="600"
-            src="../Imagens/youtube.png"
+            src="Imagens/youtube.png"
             alt="Print do Projeto do YouTube"
           />
           <a
+            class = "p-1 text-center" 
             target="_blank"
             class="underline hover:text-blue-300"
             href="https://www.youtube.com/live/w7sIMxxVELs"
@@ -82,16 +84,17 @@
           >
         </div>
 
-        <div class="flex flex-col gap-3">
+        <div class="flex flex-col gap-3 text-center">
           <h3 class="font-bold text-xl">
             Réplica da Página de Login da Hashtag
           </h3>
           <img
             width="600"
-            src="../Imagens/tela-login.png"
+            src="Imagens/tela-login.png"
             alt="Print do Projeto de Tela de Login"
           />
-          <a
+          <a 
+            class="p-1 text-center"
             target="_blank"
             class="underline hover:text-blue-300"
             href="https://www.youtube.com/watch?v=9xh-CHyjNYc"
