--- a/Tailwind/index.html
+++ b/Tailwind/index.html
@@ -49,7 +49,7 @@
     </section>
 
     <section class="p-10 flex flex-col gap-4 border-b border-gray-600">
-      <h2 class="text-2xl font-bold">Projetos</h2>
+      <h2 class="text-2xl font-bold">Projetos de páginas para aulas.</h2>
 
       <div class="flex gap-5">
         <div class="flex flex-col gap-3 text-center">
