--- a/Tailwind/default.html
+++ b/Tailwind/default.html
@@ -23,6 +23,22 @@ body {
   color: white;
 }
 
+
+.header {
+  padding: 50px; /* Mantém o espaçamento interno do header */
+  text-align: center; /* Centraliza o texto */
+  color: white; /* Cor do texto no header */
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.7); /* Sombra para o texto para melhorar a leitura */
+
+  /* --- PROPRIEDADES DA IMAGEM DE FUNDO --- */
+  background-image: url('Imagens/aeronave.jpg'); /* Define a imagem de fundo */
+  background-size: cover; /* Ajusta a imagem para cobrir todo o header */
+  background-repeat: no-repeat; /* Evita que a imagem se repita */
+  background-position: center; /* Centraliza a imagem no header */
+  background-color: #1abc9c; /* Cor de fallback caso a imagem não carregue ou para um efeito de overlay */
+  /* -------------------------------------- */
+}
+
 /* Style the top navigation bar */
 .navbar {
   display: flex;
@@ -61,9 +77,18 @@ body {
 /* Main column */
 .main {
   flex: 70%;
-  background-color: white;
+  background-color: darkseagreen;
   padding: 20px;
+  padding: auto;
+  border: 12px solid darkseagreen; 
+  display: darkseagreen;
+  border-radius: 15px;
+  color: darkgreen;
+  
 }
+
+
+
 
 /* Fake image, just for this example */
 .fakeimg {
@@ -74,9 +99,10 @@ body {
 
 /* Footer */
 .footer {
-  padding: 20px;
+  padding: 2px;
   text-align: center;
-  background: #ddd;
+  background: rgb(21, 22, 22);
+  color: white
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
@@ -87,16 +113,16 @@ body {
 }
 </style>
 </head>
-<body>
+<body style="background-color: darkcyan;">
 
-<!-- Note -->
-<div style="background:darkcyan;padding:5px">
-  <h1 style="color: white;   text-align:center; text-shadow: 5px 5px 5px black; font-size: 50px;">CENTRO OESTE AIRPORT</h1>
+<!-- <div style="background:darkcyan;padding:5px"> -->
+  
 </div>
 
 <!-- Header -->
 <div class="header">
-  <h1>My Website</h1>
+    <h1 style="color: white;   text-align:center; text-shadow: 5px 5px 5px black; font-size: 50px;">CENTRO OESTE AIRPORT</h1>
+  <h1>My Website </h1>
   <p>With a <b>flexible</b> layout.</p>
 </div>
 
@@ -121,17 +147,20 @@ body {
     <div class="fakeimg" style="height:60px;">Image</div><br>
     <div class="fakeimg" style="height:60px;">Image</div>
   </div>
-  <div class="main">
+  <div class="main" >
     <h2>TITLE HEADING</h2>
     <h5>Title description, Dec 7, 2024</h5>
     <div class="fakeimg" style="height:200px;">Image</div>
     <p>Some text..</p>
     <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
     <br>
-    <h2>TITLE HEADING</h2>
+        <h2>TITLE HEADING</h2>
     <h5>Title description, Sep 2, 2024</h5>
     <div class="fakeimg" style="height:200px;">Image</div>
     <p>Some text..</p>
+    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
     <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
   </div>
 </div>
