--- a/Tailwind/default.html
+++ b/Tailwind/default.html
@@ -17,14 +17,6 @@ body {
 
 /* Header/logo Title */
 .header {
-  padding: 50px;
-  text-align: center;
-  background: #1abc9c;
-  color: white;
-}
-
-
-.header {
   padding: 50px; /* Mantém o espaçamento interno do header */
   text-align: center; /* Centraliza o texto */
   color: white; /* Cor do texto no header */
@@ -78,17 +70,14 @@ body {
 .main {
   flex: 70%;
   background-color: darkseagreen;
-  padding: 20px;
+  padding: 10px;
   padding: auto;
-  border: 12px solid darkseagreen; 
+  border: 10px solid darkseagreen; 
   display: darkseagreen;
-  border-radius: 15px;
+  border-radius: 30px;
   color: darkgreen;
   
 }
-
-
-
 
 /* Fake image, just for this example */
 .fakeimg {
@@ -147,7 +136,7 @@ body {
     <div class="fakeimg" style="height:60px;">Image</div><br>
     <div class="fakeimg" style="height:60px;">Image</div>
   </div>
-  <div class="main" >
+  <div class="main" style="margin-top: 10px;">
     <h2>TITLE HEADING</h2>
     <h5>Title description, Dec 7, 2024</h5>
     <div class="fakeimg" style="height:200px;">Image</div>
