--- a/Tailwind/index.html
+++ b/Tailwind/index.html
@@ -28,9 +28,9 @@
           <h3 class="font-bold text-xl">Linguagens</h3>
 
           <ul class="list-disc ml-4">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
+            <li><a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML</a></li>
+            <li><a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS</a></li>
+            <li><a href="https://www.w3schools.com/js/default.asp" target="_blank">JavaScript</a></li>
           </ul>
         </div>
 
